syntax = "proto3";

package rpc;
option go_package = "github.com/ISSuh/sos/internal/infrastructure/transport/rpc";

import "domain/model/message/block.proto";
import "domain/model/message/block_header.proto";

message StorageResponse {
  bool success = 1;
  string message = 2;
}

service BlockStorage {
  rpc Put(message.Block) returns (StorageResponse) {}
  rpc GetBlock(message.BlockHeader) returns (message.Block) {}
  rpc GetBlockHeader(message.BlockHeader) returns (message.BlockHeader) {}
  rpc Delete(message.BlockHeader) returns (StorageResponse) {}
}
